# json-translator

./: .gitignore  README.md  main.py  original.json  pyproject.toml  translated_spanish.json
.github/workflows/: poetry.yml  pylint.yml
example/: destination_german.json  destination_polish.json  destination_spanish.json  destination_turkish.json  source_en.json  source_english.json
